--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,272 @@
+Sat Apr 16 21:25:22 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/rewrite/rewrite.c:
+
+	rewrite_urig(): Simplify now that URI encoding is length-based.  
+
+Sat Apr 16 21:22:08 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/uri.c:
+
+	encode_file_uri_string(): Simplify now that URI encoding is
+	length-based.  
+
+Sat Apr 16 21:21:08 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: protocol/uri.c, protocol/uri.h, protocol/file/file.c,
+	protocol/gopher/gopher.c, protocol/rewrite/rewrite.c,
+	viewer/text/form.c:
+
+	encode_uri_string(): Add magic namelen parameter.  
+
+Sat Apr 16 15:36:55 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* contrib/Makefile.am:
+
+	Distribute babelfish.lua.  
+
+Sat Apr 16 14:46:18 2005  Laurent Monin <zas@norz.org>:
+
+	* src/sched/connection.c:
+
+	struct keepalive_connection: @add_time -> @creation_time.  
+
+Sat Apr 16 14:41:50 2005  Laurent Monin <zas@norz.org>:
+
+	* src/util/: time.c, time.h:
+
+	Drop timeval_diff().  
+
+Sat Apr 16 14:41:01 2005  Laurent Monin <zas@norz.org>:
+
+	* src/sched/connection.c:
+
+	Use timeval_T instead of double.  
+
+Sat Apr 16 14:23:54 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: setup.h, lowlevel/dns.c:
+
+	Use timeval_T instead of double.  
+
+Sat Apr 16 09:22:21 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	Remove CONFIG_DEBUGs around assertion. Miciah thinks it is stupid.  
+
+Sat Apr 16 05:04:40 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Add to the todo on regex compilation error reporting.  
+
+Sat Apr 16 05:03:33 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Use search_for_pattern in get_searched_regex.  
+
+Sat Apr 16 05:00:11 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Move a TODO.  
+
+Sat Apr 16 04:58:33 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Factor code out of is_in_range_regex into the new
+	search_for_pattern.  
+
+Sat Apr 16 04:47:38 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Add s2 to common_ctx.  
+
+Sat Apr 16 04:46:28 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Use common_ctx.s1 where possible.  
+
+Sat Apr 16 04:43:08 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Put the search pattern in common_ctx.  
+
+Sat Apr 16 04:37:03 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	On second thought, make found common.  
+
+Sat Apr 16 04:32:27 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Group the common_ctx initialisation and the ctx initialisation.  
+
+Sat Apr 16 04:31:20 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Move stuff from the common struct regex_match_context to the
+	specific contexts struct is_in_range_regex_context and struct
+	get_searched_regex_context.  
+
+Sat Apr 16 04:21:36 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/viewer/text/search.c:
+
+	Rename struct regex_match_context variables from ctx to common_ctx.  
+
+Sat Apr 16 01:46:59 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Regroup.  
+
+Sat Apr 16 01:44:17 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Describe conn_info.  
+
+Sat Apr 16 01:38:17 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.h:
+
+	D-scribe.  
+
+Sat Apr 16 01:20:03 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	Make struct conn_info private.  
+
+Sat Apr 16 01:13:56 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h,
+	protocol/http/http.c, ssl/connect.c:
+
+	complete_connect_socket(): Provide functionality needed by HTTPs
+	CONNECT implementation. It is a bit ugly, well hella ugly but it
+	will make it possible to privatize conn_info.  
+
+Sat Apr 16 00:40:53 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Call the conn_info callback from complete_connect_socket().  
+
+Sat Apr 16 00:34:50 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	done_connection_info(): Make static.  
+
+Sat Apr 16 00:31:49 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	Move conn_info->need_ssl to socket->need_ssl.  
+
+Sat Apr 16 00:28:33 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, lowlevel/connect.h, ssl/connect.c:
+
+	Make the SSL-layer use complete_connect_socket() instead of
+	done_connection_info().  
+
+Sat Apr 16 00:15:34 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Only set the socket protocol family on success.  
+
+Sat Apr 16 00:14:12 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	connect_socket(): Make the error handling the default path when the
+	connect() loop terminates.  
+
+Sat Apr 16 00:12:11 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	connect_socket(): Remove block variable and use function equivalent.  
+
+Sat Apr 16 00:10:13 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	connect_socket(): Move the successful connection handling deeper.  
+
+Sat Apr 16 00:03:27 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Move connect_socket() completion to complete_connect_socket().  
+
+Fri Apr 15 23:31:45 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	Improve comment.  
+
+Fri Apr 15 23:25:25 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: lowlevel/connect.c, sched/connection.h, sched/error.c:
+
+	Introduce S_NO_FORCED_DNS used when all addresses for http6:// type
+	URIs fails. The error message is a slightly modified version of
+	S_NO_DNS: 'No host in the specified IP family was found'.  
+
+Fri Apr 15 23:09:54 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	Bitch about the irregularity of the world.  
+
+Fri Apr 15 23:08:04 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	done_connection(): Ensure that connection always is in result state
+	before notifying connection callbacks the last time. So set the
+	state to S_INTERNAL if we have to. Should fix random crashes but
+	there are still some corner case that should be fixed.  
+
+Fri Apr 15 23:03:48 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	done_connection() notifies callbacks so remove commented out calls.  
+
+Fri Apr 15 22:41:48 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/connect.c:
+
+	connect_socket(): Retry with the connection_state state it was
+	passed. Fixes problem reported by Quazgaa when connecting fails, but
+	the connection is not properly removed due to ending with non-result
+	state.  
+
+Fri Apr 15 22:34:21 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	Connections should _always_ end in result state, that is either
+	-errno or internal result state, so insert assertion but only for
+	debug builds because I am not sure if it safely can be assumed that
+	errno is always non-zero. This assertion will currently fail when
+	connect_socket() runs out of addresses to try.  
+
 Fri Apr 15 21:30:58 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
 
 	* src/viewer/text/search.c:
