--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,218 @@
+Mon Apr 18 22:07:16 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/progress.c, sched/progress.h:
+
+	average_speed(),current_speed(),estimated_time() ->
+	
+	progress_average_speed(),progress_current_speed(),progress_estimated_time().
+
+Mon Apr 18 22:00:27 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/progress.c, sched/progress.h:
+
+	Use a macro to wrap access to @elapsed field of struct progress.
+	Temporary move.  
+
+Mon Apr 18 17:41:09 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/dialogs/progress.h:
+
+	Wrap prototype.  
+
+Mon Apr 18 17:35:32 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/progress.c:
+
+	draw_progress_bar(): @current -> @percent.  
+
+Mon Apr 18 17:34:33 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/progress.c:
+
+	draw_progress_bar(): @percent,@percent_len -> @s, @slen.  
+
+Mon Apr 18 17:31:56 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/progress.c:
+
+	draw_progress_bar(): @progress_ -> @progress.  
+
+Mon Apr 18 17:31:13 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/progress.c:
+
+	draw_progress_bar(): @progress -> @current.  
+
+Mon Apr 18 17:27:37 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/: download.c, progress.c, progress.h, status.c:
+
+	Pass a struct progress * to draw_progress_bar().  
+
+Mon Apr 18 17:19:37 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/: download.c, progress.c, progress.h, status.c,
+	status.h:
+
+	Move draw_progress_bar() to dialogs/progress.  
+
+Mon Apr 18 17:13:03 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/progress.h, dialogs/status.c, dialogs/status.h,
+	sched/download.c, sched/download.h:
+
+	Move download_is_progressing() to sched/download.  
+
+Mon Apr 18 17:01:46 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/status.c:
+
+	get_download_msg(): partly revert last patch and make it call
+	get_progress_msg().  
+
+Mon Apr 18 17:00:25 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/: Makefile.am, progress.c, progress.h:
+
+	Copy code from get_download_msg() to new get_progress_msg(),
+	introducing dialogs/progress.{c,h}.  
+
+Mon Apr 18 16:57:55 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/dialogs/download.c:
+
+	Drop unneded parantheses.  
+
+Mon Apr 18 16:37:02 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/status.c:
+
+	Test for download progress outside get_download_msg(). Temporary
+	move.  
+
+Mon Apr 18 16:29:13 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/status.c:
+
+	Simplify get_download_msg().  
+
+Mon Apr 18 16:23:18 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/status.c, sched/progress.h:
+
+	Finally drop significant_progress() since it looks like it has not
+	much impact on display.  
+
+Mon Apr 18 16:05:59 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/download.c, dialogs/status.c, sched/progress.h:
+
+	Introduce has_progress() to fix bad move to significant_progress().  
+
+Mon Apr 18 14:46:39 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: setup.h, protocol/auth/auth.c, protocol/auth/auth.h,
+	protocol/auth/dialogs.c, protocol/http/http.c:
+
+	HTTP_AUTH_{USER,PASSWORD}_MAXLEN -> AUTH_{USER,PASSWORD}_MAXLEN 
+
+Mon Apr 18 14:32:04 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: protocol/auth/digest.c, util/md5.h:
+
+	Move the MD5 system header including to our own MD5 header so it
+	should be easier to use.  
+
+Mon Apr 18 14:29:29 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/util/md5.h:
+
+	2 cleanups and a fix.  
+
+Mon Apr 18 12:53:50 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: setup.h, sched/progress.h:
+
+	Move constants definitions from setup.h to progress.h since they are
+	not subject to change.  
+
+Mon Apr 18 12:46:35 2005  Laurent Monin <zas@norz.org>:
+
+	* src/sched/: connection.c, progress.c, progress.h:
+
+	Initialize progress timer callback function and data through
+	start_update_progress() and save them in struct progress().  
+
+Mon Apr 18 12:28:47 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/status.c:
+
+	Indentation fix.  
+
+Mon Apr 18 12:28:09 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/status.c, sched/progress.h:
+
+	Move progress related macros to progress.h.  
+
+Mon Apr 18 12:26:41 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: dialogs/download.c, dialogs/status.c, sched/progress.h:
+
+	Introduce and use new macro significant_progress().  
+
+Mon Apr 18 12:20:33 2005  Laurent Monin <zas@norz.org>:
+
+	* src/dialogs/: download.c, status.c:
+
+	Replace progress->elapsed / 100 by progress->elapsed >=
+	CURRENT_SPD_AFTER * SPD_DISP_TIME to a more explicit one.  
+
+Mon Apr 18 07:43:47 2005  Laurent Monin <zas@norz.org>:
+
+	* po/fr.po:
+
+	French translation was updated.  
+
+Sun Apr 17 23:23:56 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/connection.c:
+
+	Use connection_state enum.  
+
+Sun Apr 17 23:10:37 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/: connect.c, connect.h:
+
+	Use connection_state enum instead of int.  
+
+Sun Apr 17 23:10:15 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: encoding/encoding.c, encoding/encoding.h,
+	sched/Makefile.am, sched/download.h, sched/session.h,
+	sched/state.h:
+
+	Move connection enums to own file.  
+
+Sun Apr 17 23:07:47 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/config/options.c:
+
+	Fix some more includes.  
+
+Sun Apr 17 23:03:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/: document/renderer.c, protocol/nntp/response.h,
+	sched/connection.h, sched/task.c:
+
+	Fix some more includes.  
+
+Sun Apr 17 22:26:02 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/sched/location.h:
+
+	Fix include.  
+
 Sun Apr 17 21:38:17 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/: lowlevel/connect.c, lowlevel/connect.h,
